# RareCrest

./: .env.example  .gitignore  Cargo.toml  HealKidsEXO.md  HopeCoinEXO.md  README.md  RareAngelsEXO.md  RareEdgeEXO.md  RareStorm.md  contact.txt  package.json  pnpm-lock.yaml
.cursor/agents/: mechanical.md  overseer.md  review.md  verify-lane.md
.cursor/rules/: perfection-standard.mdc  software-factory-checklist.mdc
.github/workflows/: ci.yml
.sw-factory/WO-1/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-10/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-11/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-12/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-13/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-14/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-15/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-16/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-17/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-18/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-19/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-2/: checklist.md  context.md  implementation-plan.md  review-log.md
.sw-factory/WO-20/: checklist.md  context.md  review-log.md  (+1 more)
docs/: EXO-GAPS.md  MOBILE-DIRECTOR.md  PROVENANCE.md  SOLO-ORGANISM.md  TRUST.md  VERTICAL-FEDERATION.md  VPS-CUTOVER.md
infra/: docker-compose.yml
research/: EXO-PRD-Requirements-v1.md  README.md  exo-prd-online-research-brief-2026-07-10.md  exo-prd-skeleton.md
scripts/: ci-db-bootstrap.sql  complete_phase1_wos.py  complete_stub_wos.py  complete_wo.py  run_wo_queue.py  stack-smoke.mjs  verify-infra.ps1
services/governance-engine/: Cargo.toml
services/governance-engine/src/: app.rs  deployment_gate.rs  encryption_gate.rs  hard_rule_evaluator.rs  kill_switch_controller.rs  lib.rs  main.rs  runtime_enforcement.rs  types.rs
services/governance-engine/tests/: http_smoke.rs
services/scoring/: Cargo.toml
services/scoring/src/: anchored_assessment.rs  main.rs
(+435 files in other folders)
