[workspace]
members = [
    "services/governance-engine",
    "services/scoring",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
axum = "0.8"
uuid = { version = "1.17", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
