[package]
name = "governance-engine"
version.workspace = true
edition.workspace = true

[[bin]]
name = "governance-engine"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
