[package]
name = "governance-engine"
version.workspace = true
edition.workspace = true

[lib]
name = "governance_engine"
path = "src/lib.rs"

[[bin]]
name = "governance-engine"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
